--- a/Module1/3.html
+++ b/Module1/3.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="3.js"></script>
+    <script src="3.js" defer></script>
 </head>
 <body>
-    <p id="demo"></p>
+    <p id="sum"></p>
+    <p id="product"></p>
+    <p id="average"></p>
 </body>
 </html>
